# xai-slack

./: README.md  example_components.py  mobile_net.py  msg_trigger.xircuits  pyproject.toml  requirements.txt  slack_components.py  slack_connector.xircuits  slack_openai.xircuits
.github/workflows/: run-workflow-tests.yml
examples/: image_prediction.xircuits  msg_trigger.xircuits  slack_openai.xircuits
